--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
     <head>
         <title>Page Title</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,100;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <div class= "purple-text-container">
-            Div1
-        </div>
-        <div class= "purple-text-container">
-            Div2
-        </div>
-        <div class= "purple-text-container">
-            Div3
-        </div>
-        <div class= "purple-text-container">
-            Div4
+        <div id = "purple-text-wrapper">
+            <div class= "purple-text-container">
+                Div1
+            </div>
+            <div class= "purple-text-container">
+                Div2
+            </div>
+            <div class= "purple-text-container">
+                Div3
+            </div>
+            <div class= "purple-text-container">
+                Div4
+            </div>
         </div>
 
 <h1>This is a Heading</h1>
