--- a/index.html
+++ b/index.html
@@ -2,27 +2,87 @@
 <html>
     <head>
         <title>Page Title</title>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,100;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
         <div id = "purple-text-wrapper">
             <div class= "purple-text-container">
+                <i class="fas fa-angle-double-right"></i>
                 Div1
             </div>
             <div class= "purple-text-container">
+                <i class="fas fa-angle-double-right"></i>
                 Div2
             </div>
             <div class= "purple-text-container">
+                <i class="fas fa-angle-double-right"></i>
                 Div3
             </div>
             <div class= "purple-text-container">
+                <i class="fas fa-angle-double-right"></i>
                 Div4
             </div>
         </div>
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+
+<a href="https://www.netflix.com/browse">link text</a>
+<a target= "_blank" href="https://www.netflix.com/browse">link text</a>
+
+<img src="https://www.w3schools.com/html/pic_trulli.jpg" alt="Italian Trulli">
+
+
+<button type="button">Click Me!</button>
+
+
+        <div>
+            <label for= "fname">First name:</label>
+            <input type="text" id="fname" name="fname">
+        </div>
+
+        <div>
+            <label for= "email">Email:</label>
+            <input type="email" id="email" name="email">
+        </div>
+
+        <div>
+            <label for= "password">Password:</label>
+            <input type="password" id="password" name="password">
+        </div>
+
+        <div>
+            <label for="cars">Choose a car:</label>
+            <select name="cars" id="cars">
+              <option value="volvo">Volvo</option>
+              <option value="saab">Saab</option>
+              <option value="mercedes">Mercedes</option>
+              <option value="audi">Audi</option>
+            </select>
+        </div>
+
+        <table style="width:100%">
+            <tr>
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>Age</th>
+            </tr>
+            <tr>
+              <td>Jill</td>
+              <td>Smith</td>
+              <td>50</td>
+            </tr>
+            <tr>
+              <td>Eve</td>
+              <td>Jackson</td>
+              <td>94</td>
+            </tr>
+          </table>
+
+
+
 
 </body>
 </html>
